tried title change to fix formatting

--- a/_posts/2013-04-15-matthew-1.md
+++ b/_posts/2013-04-15-matthew-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Bookie: The Gospel According to Matthew, Chapter 1:1-17
+title: "Bookie: The Gospel According to Matthew, Chapter 1:1-17"
 ---
 
 # What's the go
