ahh... stupid apostrophe c'n'p thing

--- a/_posts/2013-04-23-matthew-1-2.md
+++ b/_posts/2013-04-23-matthew-1-2.md
@@ -8,14 +8,14 @@ title: "Bookie: The Gospel According to Matthew, Chapter 1:18-2:12"
 > with child from the Holy Spirit. Her husband Joseph, being a righteous man and
 > unwilling to expose her to public disgrace, planned to dismiss her quietly.
 > But just when he had resolved to do this, an angel of the Lord appeared to him
-> in a dream and said, ‘Joseph, son of David, do not be afraid to take Mary as your wife,
+> in a dream and said, 'Joseph, son of David, do not be afraid to take Mary as your wife,
 > for the child conceived in her is from the Holy Spirit. She will bear a son,
-> and you are to name him Jesus, for he will save his people from their sins.’
+> and you are to name him Jesus, for he will save his people from their sins.'
 > All this took place to fulfil what had been spoken by the Lord through the prophet:
 >
-> ‘Look, the virgin shall conceive and bear a son,
->   and they shall name him Emmanuel’,
-> which means, ‘God is with us.’
+> 'Look, the virgin shall conceive and bear a son,
+>   and they shall name him Emmanuel',
+> which means, 'God is with us.'
 >
 > When Joseph awoke from sleep, he did as the angel of the Lord commanded him;
 > he took her as his wife, but had no marital relations with her until she had borne a son;
@@ -40,23 +40,23 @@ that his fiance is pregnant. It says he was a righteous man. What does this mean
 He didn't want to disgrace her. Here is the legal precedent:
 
 > Suppose a man marries a woman, but after going in to her, he dislikes her and
-> makes up charges against her, slandering her by saying, ‘I married this woman;
-> but when I lay with her, I did not find evidence of her virginity.’ The father of
-> the young woman and her mother shall then submit the evidence of the young woman’s
+> makes up charges against her, slandering her by saying, 'I married this woman;
+> but when I lay with her, I did not find evidence of her virginity.' The father of
+> the young woman and her mother shall then submit the evidence of the young woman's
 > virginity to the elders of the city at the gate. The father of the young woman shall
-> say to the elders: ‘I gave my daughter in marriage to this man but he dislikes her;
+> say to the elders: 'I gave my daughter in marriage to this man but he dislikes her;
 > now he has made up charges against her, saying, “I did not find evidence of your
-> daughter’s virginity.” But here is the evidence of my daughter’s virginity.’
+> daughter's virginity.” But here is the evidence of my daughter's virginity.'
 > Then they shall spread out the cloth before the elders of the town. The elders
 > of that town shall take the man and punish him; they shall fine him one hundred
-> shekels of silver (which they shall give to the young woman’s father) because he
+> shekels of silver (which they shall give to the young woman's father) because he
 > has slandered a virgin of Israel. She shall remain his wife; he shall not be permitted
 > to divorce her as long as he lives.
 >
-> If, however, this charge is true, that evidence of the young woman’s virginity was not found,
-> then **they shall bring the young woman out to the entrance of her father’s house and the
+> If, however, this charge is true, that evidence of the young woman's virginity was not found,
+> then **they shall bring the young woman out to the entrance of her father's house and the
 > men of her town shall stone her to death, because she committed a disgraceful act in
-> Israel by prostituting herself in her father’s house**. So you shall purge the evil from your midst.
+> Israel by prostituting herself in her father's house**. So you shall purge the evil from your midst.
 >
 > If a man is caught lying with the wife of another man, both of them shall die,
 > the man who lay with the woman as well as the woman. So you shall purge the evil from Israel. 
@@ -64,7 +64,7 @@ He didn't want to disgrace her. Here is the legal precedent:
 > If there is a young woman, a virgin already engaged to be married, and a man meets
 > her in the town and lies with her, you shall bring both of them to the gate of that
 > town and stone them to death, the young woman because she did not cry for help in the
-> town and the man because he violated his neighbour’s wife. So you shall purge the evil
+> town and the man because he violated his neighbour's wife. So you shall purge the evil
 > from your midst.
 >
 > But if the man meets the engaged woman in the open country, and the man seizes her and
@@ -76,7 +76,7 @@ He didn't want to disgrace her. Here is the legal precedent:
 >
 > If a man meets a virgin who is not engaged, and seizes her and lies with her,
 > and they are caught in the act, the man who lay with her shall give fifty shekels
-> of silver to the young woman’s father, and she shall become his wife. Because he violated
+> of silver to the young woman's father, and she shall become his wife. Because he violated
 > her he shall not be permitted to divorce her as long as he lives. 
 [Deut. 22:13-29 NRSV](http://bible.oremus.org/?ql=233682373)
 
@@ -131,18 +131,18 @@ about it. And new kings don't like old kings.
 
 > When King Herod heard this, he was frightened, and all Jerusalem with him;
 > and calling together all the chief priests and scribes of the people, he inquired
-> of them where the Messiah was to be born. They told him, ‘In Bethlehem of Judea;
+> of them where the Messiah was to be born. They told him, 'In Bethlehem of Judea;
 > for so it has been written by the prophet:
 >
 > “And you, Bethlehem, in the land of Judah,
 >   are by no means least among the rulers of Judah;
 > for from you shall come a ruler
->   who is to shepherd my people Israel.” ’
+>   who is to shepherd my people Israel.” '
 >
 > Then Herod secretly called for the wise men and learned from them the exact time
-> when the star had appeared. Then he sent them to Bethlehem, saying, ‘Go and search
+> when the star had appeared. Then he sent them to Bethlehem, saying, 'Go and search
 > diligently for the child; and when you have found him, bring me word so that I may
-> also go and pay him homage.’
+> also go and pay him homage.'
 > 
 > When they had heard the king, they set out; and there, ahead of them, went the star
 > that they had seen at its rising, until it stopped over the place where the child was.
