--- a/_posts/2013-04-23-matthew-1-2.md
+++ b/_posts/2013-04-23-matthew-1-2.md
@@ -29,7 +29,7 @@ of this story that it is hard to get certain pictures out of your head and read
 the story as if its the first time. I have so many wrong ideas about the Christmas
 story - like the timing and number of the magi (they were something like two years
 late to the birth), and that Jesus was born in a barn rather than [Joseph's family
-home](https://www.biblearchaeology.org/post/2008/11/08/The-Manger-and-the-Inn.aspx) (the greek word translated *inn*, \(\kappa\alpha\tau\acute{\alpha}\lambda\upsilon\mu\alpha\)
+home](https://www.biblearchaeology.org/post/2008/11/08/The-Manger-and-the-Inn.aspx) (the greek word translated *inn*, \\(\kappa\alpha\tau\acute{\alpha}\lambda\upsilon\mu\alpha\\)
 *kat-al-oo-mah*, is translated *guest room* everywhere else it is used. Only in
 the Christmas story did the mistranslation stick. And it would have been a terrible
 breach of hospitality - anathema - for Joseph's family to put them out in the cold *for weeks*).
