Update gempack; fix build errors

--- a/_posts/2013-04-23-matthew-1-2.md
+++ b/_posts/2013-04-23-matthew-1-2.md
@@ -45,8 +45,8 @@ He didn't want to disgrace her. Here is the legal precedent:
 > the young woman and her mother shall then submit the evidence of the young woman's
 > virginity to the elders of the city at the gate. The father of the young woman shall
 > say to the elders: 'I gave my daughter in marriage to this man but he dislikes her;
-> now he has made up charges against her, saying, “I did not find evidence of your
-> daughter's virginity.” But here is the evidence of my daughter's virginity.'
+> now he has made up charges against her, saying, "I did not find evidence of your
+> daughter's virginity." But here is the evidence of my daughter's virginity.'
 > Then they shall spread out the cloth before the elders of the town. The elders
 > of that town shall take the man and punish him; they shall fine him one hundred
 > shekels of silver (which they shall give to the young woman's father) because he
@@ -134,10 +134,10 @@ about it. And new kings don't like old kings.
 > of them where the Messiah was to be born. They told him, 'In Bethlehem of Judea;
 > for so it has been written by the prophet:
 >
-> “And you, Bethlehem, in the land of Judah,
+> And you, Bethlehem, in the land of Judah,
 >   are by no means least among the rulers of Judah;
 > for from you shall come a ruler
->   who is to shepherd my people Israel.” '
+>   who is to shepherd my people Israel.'
 >
 > Then Herod secretly called for the wise men and learned from them the exact time
 > when the star had appeared. Then he sent them to Bethlehem, saying, 'Go and search
