Reformat post list to show excerpts; fix some old post excerpts to something decent

--- a/_posts/2013-04-15-matthew-1.md
+++ b/_posts/2013-04-15-matthew-1.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title: "Bookie: The Gospel According to Matthew, Chapter 1:1-17"
+excerpt:
+  "So I've decided on a feature for this blog: a regular series through the gospels,
+  taken one or two chapters a week. This will be the start of a general trend of book reviews or \"Bookies.\" So I will start in a natural place: the gospel of Matthew."
 ---
 
 # What's the go
