--- a/_posts/2013-04-23-matthew-1-2.md
+++ b/_posts/2013-04-23-matthew-1-2.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "Bookie: The Gospel According to Matthew, Chapter 1:18-2:12"
+excerpt: _Now the birth of Jesus the Messiah took place in this way._ 
 ---
 
 > Now the birth of Jesus the Messiah took place in this way. When his mother Mary
