--- a/_posts/2013-05-13-matthew-2.md
+++ b/_posts/2013-05-13-matthew-2.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title: "Bookie: The Gospel According to Matthew, Chapter 2:13-23"
+excerpt:
+  _Now after they had left, an angel of the Lord appeared to Joseph in a dream and said,
+  \'Get up, take the child and his mother, and flee to Egypt, and remain there until I tell you...\'_
 ---
 
 > Now after they had left, an angel of the Lord appeared to Joseph in a dream and said,
