--- a/_posts/2013-05-21-matthew-3.md
+++ b/_posts/2013-05-21-matthew-3.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: "Bookie: The Gospel According to Matthew, Chapter 3:1-17"
+excerpt: _In those days John the Baptist appeared in the wilderness of Judea, proclaiming,
+ 'Repent, for the kingdom of heaven has come near.'_ 
 ---
 
 > In those days John the Baptist appeared in the wilderness of Judea, proclaiming,
