--- a/_posts/2014-01-02-reboot.md
+++ b/_posts/2014-01-02-reboot.md
@@ -2,6 +2,8 @@
 layout: post
 title: Reboot
 date: 2014-01-02 20:03:00
+excerpt:
+  Well it's been half a year since my last post. One thing leads to another... and I do my usual thing of dropping a side project for a while. But it's time to go again.
 ---
 
 ## Time to start this thing again...
